# llm_doc_retrieval

./: .gitignore  README.md  pyproject.toml
src/crawler/: doc_crawler.py  test_crawler.ipynb
src/json_retriever/: json_retrieval.py
src/retriever/: doc_chunker.py  doc_embedder.py  doc_retriever.py
src/retriever/prompts/: qa_prompt.py
src/retriever/response_model/: Retriever.py
