[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_doc_retrieval"
version = "0.1.0"
description = "LLM-based document retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/llm_doc_retrieval"]
