[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_doc_retrieval"
version = "0.1.0"
description = "LLM-based document retrieval"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "openai>=2.21.0",
    "instructor>=1.14.5",
    "arize-phoenix==13.12.0",
    "arize-phoenix-client>=1.31.0",
    "arize-phoenix-evals==2.11.0",
    "openinference-instrumentation-openai>=0.1",
    "jupyter",
    "graphrag",
    "langchain-text-splitters>=1.1.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/retriever"]
